--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -7,6 +7,7 @@
   "tillbehor-taljstenskaminer": "Tillbehör Täljstenskaminer",
   "eldstader/murspis": "Eldstäder/Murspis",
   "gjutjarnskaminer": "Gjutjärnskaminer",
+  "skorsten": "Skorsten",
   "varmepumpar": "Värmepumpar",
   "luftvarmepumpar": "Luftvärmepumpar",
   "franluftvarmepump": "Frånluftsvärmepump",
@@ -19,8 +20,11 @@
   "friflode-sjalvdrag": "Friflöde/Självdrag",
   "golvvärme": "Golvvärme",
   "vvs": "VVS",
-  "kranar/blandare": "Kranar/Blandare",
-  "handfat/badkar": "Handfat/Badkar",
+  "kranar": "Kranar",
+  "blandare": "Blandare",
+  "handfat": "Handfat",
+  "badkar": "Badkar",
+  "duschar": "Duschar",
   "spabad/badtunnor": "Spabad/Badtunnor",
   "toastolar": "Toalettstolar",
   "sol/lagring/elbil": "Sol/Lagring/Elbil",
@@ -31,12 +35,16 @@
   "fonster": "Fönster",
   "takstegar": "Takstegar",
   "inredning": "Inredning",
-  "koksinredning": "Köksinredning",
-  "badrumsinredning": "Badrumsinredning",
+  "kok": "Kök",
+  "kokskranar": "Kökskranar",
+  "diskho": "Diskho",
+  "badrum": "Badrum",
+  "tvattstallskranar": "Tvättställskranar",
+  "badkarsblandare": "Badkarsblandare",
   "garderob/forvaring": "Garderob/Förvaring",
   "hallinredning": "Hallinredning",
   "vardagsrumsinrening": "Vardagsrumsinredning",
-  "Vitvaror": "Vitvaror",
+  "vitvaror": "Vitvaror",
   "kylar": "Kylar",
   "frysar": "Frysar",
   "vinkylar": "Vinkylar",
@@ -91,83 +99,7 @@
   "skidor": "Skidor",
   "menu-fritid-main": "Fritid",
   "menu-tradgard-main": "Trädgård",
-  "menu-demos": "Demos",
-  "menu-men-wear": "Men Wear",
-  "menu-women-wear": "Women Wear",
-  "menu-casual-wear": "Tshirt",
-  "menu-search": "Search",
-  "menu-users": "Users",
-  "menu-my-account": "My Account",
-  "menu-sign-in": "Sign In",
-  "menu-sign-up": "Sign Up",
-  "menu-forget-password": "Forget Password",
-  "menu-shops": "Shops",
-  "menu-pages": "Pages",
-  "menu-faq": "FAQ",
-  "menu-privacy-policy": "Privacy Policy",
-  "menu-terms-condition": "Terms & Condition",
-  "menu-contact-us": "Contact Us",
-  "menu-checkout": "Checkout",
-  "menu-collection": "Collection",
-  "menu-category": "Category",
-  "menu-order": "Order",
-  "menu-404": "404",
-  "menu-top-wear": "Top Wear",
-  "menu-t-shirt": "T-Shirt",
-  "menu-casual-shirts": "Hummel",
-  "menu-formal-shirts": "Formal Shirts",
-  "menu-blazwers-coats": "Blazwers & Coats",
-  "menu-suits": "Suits",
-  "menu-jackets": "Jackets",
-  "menu-belt-scarves": "Belt, Scarves & More",
-  "menu-watches-wearables": "Watches & Wearables",
-  "menu-western-wear": "Western Wear",
-  "menu-dresses": "Dresses",
-  "menu-jumpsuits": "Jumpsuits",
-  "menu-tops-shirts": "Tops, T-Shirts & Shirts",
-  "menu-shorts-skirts": "Shorts & Skirts",
-  "menu-shurgs": "Shurgs",
-  "menu-blazers": "Blazers",
-  "menu-plus-size": "Plus Size",
-  "menu-sunglasses-frames": "Sunglasses & Frames",
-  "menu-footwear": "Footwear",
-  "menu-sports-active-wear": "Sports & Active Wear",
-  "menu-clothing": "Clothing",
-  "menu-flats": "Flats",
-  "menu-casual-shoes": "Casual Shoes",
-  "menu-heels": "Heels",
-  "menu-boots": "Boots",
-  "menu-sports-accessories": "Sports Accessories",
-  "menu-lingerie-sleepwear": "Lingerie & Sleepwear",
-  "menu-bra": "Bra",
-  "menu-briefs": "Briefs",
-  "menu-sleepwear": "Sleepwear",
-  "menu-makeup": "Makeup",
-  "menu-skincare": "Skincare",
-  "menu-premium-beauty": "Premium Beauty",
-  "menu-lipsticks": "Lipsticks",
-  "menu-gadgets": "Gadgets",
-  "menu-smart-wearables": "Smart Wearables",
-  "menu-headphones": "Headphones",
-  "menu-jewellers": "Jewellers",
-  "menu-fashion-jewellers": "Fashion Jewellers",
-  "menu-fine-jewellers": "Fine Jewellers",
-  "menu-backpacks": "Backpacks",
-  "menu-handbags-wallets": "Handbags & Wallets",
-  "menu-all-categories": "All categories",
-  "menu-deals-today": "Deals Today",
-  "menu-kids": "Kids",
-  "menu-sports": "Sports",
-  "menu-contact": "Contact",
-  "menu-offers": "Offers",
-  "menu-wishlist": "Wishlist",
-  "menu-shopping": "Shopping",
-  "menu-womens-fashion": "Women’s Fashion",
-  "menu-mens-fashion": "Men’s Fashion",
-  "menu-watches": "Watches",
-  "menu-wallets": "Wallets",
-  "menu-bags": "Bags",
-  "menu-jewelry": "Jewelry",
-  "menu-sunglasses": "Sunglasses",
-  "menu-sneakers": "Sneakers"
+  "koksinredning": "Köksinredning",
+  "badrumsinredning": "Badrumsinredning",
+  "batterier": "Batterier"
 }
