--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -1,12 +1,15 @@
 {
-  "hushall": "Household",
+  "hushall": "Home & Living",
   "braskaminer": "Wood-burning Stoves",
   "taljstenskaminer": "Soapstone Stoves",
   "kaminer": "Stoves",
-  "eldstader/murspis": "Fireplaces",
+  "tillbehor-kaminer": "Accessories for Stoves",
+  "tillbehor-taljstenskaminer": "Accessories for Soapstone Stoves",
+  "eldstader/murspis": "Fireplaces/Masonry Fireplaces",
   "gjutjarnskaminer": "Cast Iron Stoves",
+  "skorsten": "Chimney",
   "varmepumpar": "Heat Pumps",
-  "luftvarmepumpar": "Air Heat Pumps",
+  "luftvarmepumpar": "Air Source Heat Pumps",
   "franluftvarmepump": "Exhaust Air Heat Pump",
   "bergvarmepumpar": "Geothermal Heat Pumps",
   "jordvarmepump": "Ground Source Heat Pump",
@@ -14,33 +17,40 @@
   "ventilation": "Ventilation",
   "ftx-aggregat": "FTX Units",
   "mekaniskventilation": "Mechanical Ventilation",
-  "friflode-sjalvdrag": "Natural Ventilation",
+  "friflode-sjalvdrag": "Natural Draft Ventilation",
   "golvvärme": "Underfloor Heating",
   "vvs": "Plumbing",
-  "kranar/blandare": "Faucets/Mixers",
-  "handfat/badkar": "Sinks/Bathtubs",
-  "spabad/badtunnor": "Hot Tubs",
+  "kranar": "Faucets",
+  "blandare": "Mixers",
+  "handfat": "Sinks",
+  "badkar": "Bathtubs",
+  "duschar": "Showers",
+  "spabad/badtunnor": "Hot Tubs/Wood-fired Hot Tubs",
   "toastolar": "Toilets",
-  "sol/lagring/elbil": "Solar/Storage/Electric Cars",
+  "sol/lagring/elbil": "Solar/Storage/Electric Car",
   "solsystem": "Solar Systems",
   "Batterier": "Batteries",
-  "elbilsladdning": "Electric Car Charging",
+  "elbilsladdning": "EV Charging",
   "byggvaror": "Building Materials",
   "fonster": "Windows",
   "takstegar": "Roof Ladders",
   "inredning": "Interior",
-  "koksinredning": "Kitchen Interior",
-  "badrumsinredning": "Bathroom Interior",
+  "kok": "Kitchen",
+  "kokskranar": "Kitchen Faucets",
+  "diskho": "Sink",
+  "badrum": "Bathroom",
+  "tvattstallskranar": "Washbasin Faucets",
+  "badkarsblandare": "Bathtub Mixers",
   "garderob/forvaring": "Closet/Storage",
-  "hallinredning": "Hallway Interior",
-  "vardagsrumsinrening": "Living Room Interior",
-  "Vitvaror": "White Goods",
-  "kylar": "Refrigerators",
+  "hallinredning": "Hallway Furnishing",
+  "vardagsrumsinrening": "Living Room Furnishing",
+  "vitvaror": "Home Appliances",
+  "kylar": "Fridges",
   "frysar": "Freezers",
   "vinkylar": "Wine Coolers",
   "diskmaskiner": "Dishwashers",
-  "frysboxar": "Freezer Chests",
-  "kombineradkyl/frys": "Combined Refrigerator/Freezer",
+  "frysboxar": "Chest Freezers",
+  "kombineradkyl/frys": "Fridge/Freezer Combo",
   "flaktar": "Fans",
   "tvattmaskiner": "Washing Machines",
   "torktumlare": "Dryers",
@@ -48,13 +58,13 @@
   "hallar": "Hallways",
   "ugnar": "Ovens",
   "bastu": "Sauna",
-  "elektiskt/bastupriser": "Electric Sauna Heaters",
-  "vedeldade/bastuspisar": "Wood-fired Sauna Heaters",
+  "elektiskt/bastupriser": "Electric/Sauna Heaters",
+  "vedeldade/bastuspisar": "Wood-fired/Sauna Stoves",
   "tillbehor": "Accessories",
   "fritid": "Leisure",
   "bastu-inredning": "Sauna Interior",
   "bastu-stugor": "Sauna Cabins",
-  "forfon/atv": "Headlights/ATV",
+  "forfon/atv": "Snow Plow/ATV",
   "atv/utv": "ATV/UTV",
   "snoskoter": "Snowmobile",
   "elsparkcyklar": "Electric Scooters",
@@ -63,7 +73,7 @@
   "mopeder": "Mopeds",
   "mopedbilar": "Moped Cars",
   "batar/marin": "Boats/Marine",
-  "plotter/ekolod": "Plotters/Fish Finders",
+  "plotter/ekolod": "Chartplotters/Fish Finders",
   "radar": "Radar",
   "roddbat": "Rowboat",
   "jetskis": "Jetskis",
@@ -73,111 +83,23 @@
   "fiskespon": "Fishing Rods",
   "fiskerulle": "Fishing Reels",
   "fiskedrag": "Fishing Lures",
-  "ekolod": "Fish Finders",
+  "ekolod": "Fish Finder",
   "trollingmotor": "Trolling Motor",
   "fiskeklader": "Fishing Clothes",
-  "sport": "Sport",
+  "sport": "Sports",
   "golf": "Golf",
   "golfbollar": "Golf Balls",
   "golfklubbor": "Golf Clubs",
   "utrustning": "Equipment",
   "golfklader": "Golf Clothes",
-  "sportklader": "Sports Clothes",
-  "traningsklader": "Training Clothes",
+  "sportklader": "Sportswear",
+  "traningsklader": "Workout Clothes",
   "alpin": "Alpine",
   "langdskidor": "Cross-country Skis",
   "skidor": "Skis",
-  "menu-hus-main": "Hushåll",
-  "menu-fritid-main": "Outdoor",
+  "menu-fritid-main": "Leisure",
   "menu-tradgard-main": "Garden",
-  "menu-demos": "Demos",
-  "menu-modern": "Modern",
-  "menu-standard": "Standard",
-  "pizza-ugn": "Pizzaugn",
-  "menu-minimal": "Minimal",
-  "menu-vintage": "Vintage",
-  "menu-classic": "Classic",
-  "menu-trendy": "Trendy",
-  "menu-elegant": "Elegant",
-  "menu-refined": "Refined",
-  "menu-contemporary": "Contemporary",
-  "menu-ancient": "Ancient",
-  "menu-men-wear": "Men Wear",
-  "menu-women-wear": "Women Wear",
-  "menu-casual-wear": "Casual Wear",
-  "menu-search": "Search",
-  "menu-users": "Users",
-  "menu-my-account": "My Account",
-  "menu-sign-in": "Sign In",
-  "menu-sign-up": "Sign Up",
-  "menu-forget-password": "Forget Password",
-  "menu-shops": "Shops",
-  "menu-pages": "Pages",
-  "menu-faq": "FAQ",
-  "menu-privacy-policy": "Privacy Policy",
-  "menu-terms-condition": "Terms & Condition",
-  "menu-contact-us": "Contact Us",
-  "menu-checkout": "Checkout",
-  "menu-collection": "Collection",
-  "menu-category": "Category",
-  "menu-order": "Order",
-  "menu-404": "404",
-  "menu-top-wear": "Top Wear",
-  "menu-t-shirt": "T-Shirt",
-  "menu-casual-shirts": "Casual Shirts",
-  "menu-formal-shirts": "Formal Shirts",
-  "menu-blazwers-coats": "Blazwers & Coats",
-  "menu-suits": "Suits",
-  "menu-jackets": "Jackets",
-  "menu-belt-scarves": "Belt, Scarves & More",
-  "menu-watches-wearables": "Watches & Wearables",
-  "menu-western-wear": "Western Wear",
-  "menu-dresses": "Dresses",
-  "menu-jumpsuits": "Jumpsuits",
-  "menu-tops-shirts": "Tops, T-Shirts & Shirts",
-  "menu-shorts-skirts": "Shorts & Skirts",
-  "menu-shurgs": "Shurgs",
-  "menu-blazers": "Blazers",
-  "menu-plus-size": "Plus Size",
-  "menu-sunglasses-frames": "Sunglasses & Frames",
-  "menu-footwear": "Footwear",
-  "menu-sports-active-wear": "Sports & Active Wear",
-  "menu-clothing": "Clothing",
-  "menu-flats": "Flats",
-  "menu-casual-shoes": "Casual Shoes",
-  "menu-heels": "Heels",
-  "menu-boots": "Boots",
-  "menu-sports-accessories": "Sports Accessories",
-  "menu-lingerie-sleepwear": "Lingerie & Sleepwear",
-  "menu-bra": "Bra",
-  "menu-briefs": "Briefs",
-  "menu-sleepwear": "Sleepwear",
-  "menu-makeup": "Makeup",
-  "menu-skincare": "Skincare",
-  "menu-premium-beauty": "Premium Beauty",
-  "menu-lipsticks": "Lipsticks",
-  "menu-gadgets": "Gadgets",
-  "menu-smart-wearables": "Smart Wearables",
-  "menu-headphones": "Headphones",
-  "menu-jewellers": "Jewellers",
-  "menu-fashion-jewellers": "Fashion Jewellers",
-  "menu-fine-jewellers": "Fine Jewellers",
-  "menu-backpacks": "Backpacks",
-  "menu-handbags-wallets": "Handbags & Wallets",
-  "menu-all-categories": "All categories",
-  "menu-deals-today": "Deals Today",
-  "menu-kids": "Kids",
-  "menu-sports": "Sports",
-  "menu-contact": "Contact",
-  "menu-offers": "Offers",
-  "menu-wishlist": "Wishlist",
-  "menu-shopping": "Shopping",
-  "menu-womens-fashion": "Women’s Fashion",
-  "menu-mens-fashion": "Men’s Fashion",
-  "menu-watches": "Watches",
-  "menu-wallets": "Wallets",
-  "menu-bags": "Bags",
-  "menu-jewelry": "Jewelry",
-  "menu-sunglasses": "Sunglasses",
-  "menu-sneakers": "Sneakers"
+  "koksinredning": "Kitchen Interiors",
+  "badrumsinredning": "Bathroom Interiors",
+  "batterier": "Batteries"
 }
