--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -3,29 +3,31 @@
   "braskaminer": "Braskaminer",
   "taljstenskaminer": "Täljstenskaminer",
   "kaminer": "Kaminer",
-  "tillbehor-kaminer": "Tillbehör kaminer",
-  "tillbehor-taljstenskaminer": "Tillbehör Täljstenskaminer",
-  "eldstader/murspis": "Eldstäder/Murspis",
+  "eldstader-murspisar": "Eldstäder/Murspisar",
   "gjutjarnskaminer": "Gjutjärnskaminer",
-  "skorsten": "Skorsten",
+  "skorstenar": "Skorstenar",
   "varmepumpar": "Värmepumpar",
-  "luftvarmepumpar": "Luftvärmepumpar",
+  "luft-luft": "Luft-Luft",
+  "luft-vatten": "Luft-Vatten",
   "franluftvarmepump": "Frånluftsvärmepump",
-  "bergvarmepumpar": "Bergvärmepumpar",
-  "jordvarmepump": "Jordvärmepump",
-  "AC": "AC",
+  "bergvarme": "Bergvärme",
+  "jordvarme": "Jordvärme",
+  "ac-kyla": "AC/Kyla",
   "ventilation": "Ventilation",
   "ftx-aggregat": "FTX-aggregat",
   "mekaniskventilation": "Mekanisk Ventilation",
   "friflode-sjalvdrag": "Friflöde/Självdrag",
-  "golvvärme": "Golvvärme",
+  "golvvarme": "Golvvärme",
+  "el-golvvarme": "El-Golvvärme",
+  "vattenburen-golvvarme": "Vattenburen Golvvärme",
   "vvs": "VVS",
   "kranar": "Kranar",
   "blandare": "Blandare",
   "handfat": "Handfat",
   "badkar": "Badkar",
   "duschar": "Duschar",
-  "spabad/badtunnor": "Spabad/Badtunnor",
+  "spabad": "Spabad",
+  "badtunnor": "Badtunnor",
   "toastolar": "Toalettstolar",
   "sol/lagring/elbil": "Sol/Lagring/Elbil",
   "solsystem": "Solsystem",
@@ -61,7 +63,8 @@
   "elektiskt/bastupriser": "Elektriskt/Bastupriser",
   "vedeldade/bastuspisar": "Vedeldade/Bastuspisar",
   "tillbehor": "Tillbehör",
-  "fritid": "Fritid",
+  "fritid-tradgard": "Fritid & Trädgård",
+  "tradgard-utemiljo": "Trädgård & Utemiljö",
   "bastu-inredning": "Bastu-Inredning",
   "bastu-stugor": "Bastu-Stugor",
   "forfon/atv": "Förfön/ATV",
