--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -9,7 +9,7 @@
   "varmepumpar": "Värmepumpar",
   "luft-luft": "Luft-Luft",
   "luft-vatten": "Luft-Vatten",
-  "franluftvarmepump": "Frånluftsvärmepump",
+  "franluft": "Frånluft",
   "bergvarme": "Bergvärme",
   "jordvarme": "Jordvärme",
   "ac-kyla": "AC/Kyla",
