--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -25,7 +25,8 @@
   "handfat": "Sinks",
   "badkar": "Bathtubs",
   "duschar": "Showers",
-  "spabad/badtunnor": "Hot Tubs/Wood-fired Hot Tubs",
+  "badrumskranar": "Badrumskranar",
+  "grovkok": "Grovkök",
   "toastolar": "Toilets",
   "sol/lagring/elbil": "Solar/Storage/Electric Car",
   "solsystem": "Solar Systems",
