--- a/public/locales/fi/menu.json
+++ b/public/locales/fi/menu.json
@@ -26,6 +26,8 @@
   "handfat": "Pesualtaat",
   "badkar": "Kylpyammeet",
   "duschar": "Suihkut",
+  "badrumskranar": "Badrumskranar",
+  "grovkok": "Grovkök",
   "spabad": "Porealtaat",
   "badtunnor": "Paljut",
   "toastolar": "WC-istuimet",
