--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -26,6 +26,8 @@
   "handfat": "Handfat",
   "badkar": "Badkar",
   "duschar": "Duschar",
+  "badrumskranar": "Badrumskranar",
+  "grovkok": "Grovkök",
   "spabad": "Spabad",
   "badtunnor": "Badtunnor",
   "toastolar": "Toalettstolar",
