--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -131,6 +131,7 @@
   "text-added-to-bag": "Tillagd i kundvagnen",
   "text-view-details": "Visa detaljer",
   "text-shipping": "Frakt",
+  "text-free-shipping": "Gratis frakt",
   "text-shipping-address": "Leveransadress",
   "text-sub-total": "Subtotal",
   "text-total": "Total",
